# mcp-git-history

./: README.md  ROADMAP.md  mcp-config.json  pyproject.toml  smoke_test.sh
src/mcp_git_history/: __init__.py  server.py
